Submit only once after matching is completed on the client-side

--- a/student_matching/templates/display.html
+++ b/student_matching/templates/display.html
@@ -11,10 +11,12 @@ $def with (klp_students,sikshana_students)
 <form id="form1" name="form1" method="post" action="/match">
 
 <input type="hidden" id="sikshana_value" name="sikshana_value"/><input type="hidden" id="klp_value" name="klp_value"/><input type="hidden" id="matched_value" name="matched_value">
-Filter by Student Name: <input type="text" onkeyup="filter(this.value);">  <input type="button" value="Match Found" onclick="form_submit();">
+<input type="hidden" id="sikshana_value1" name="sikshana_value1"/><input type="hidden" id="klp_value1" name="klp_value1"/>
+Filter by Student Name: <input type="text" onkeyup="filter(this.value);">  <input type="button" value="Match Found" onclick="form_submit();">&nbsp;&nbsp;
+<input type="button" value="Submit" onclick="form_submit1();">
 <br><br>
 
-<div align="left" style="height: 100%;  width: 50%; float:left;">
+<div align="left" style="height: 75%;  width: 50%; float:left;">
 <table align="left" width="100%" style="background-color:#000000" border="1" cellspacing="0" cellpadding="0">
 <tr><td><h3><font color="white">Sikshana Data</font></h3></td></tr>
 </table>
@@ -31,7 +33,7 @@ $for student in sikshana_students:
 </table>
 </div>
 
-<div align="right" style="height: 100%; width: 50%; float:right;">
+<div align="right" style="height: 75%; width: 50%; float:right;">
 <table align="center" width="100%" style="background-color:#000000;" border="1" cellspacing="0" cellpadding="0">
 <tr><td><h3><font color="white">Klp Data</font></h3></td></tr>
 </table>
@@ -46,7 +48,7 @@ $for student in klp_students:
 </tbody>
 </table>
 </div>
-
+<br>
 </form>
 </body>
 </html>
